--- a/docs/ESWC/zone-demo.tex
+++ b/docs/ESWC/zone-demo.tex
@@ -36,12 +36,8 @@
 \maketitle
 
 \begin{abstract}%
-Nowadays we can use RSS feeds, Twitter, Google Reader, Yahoo Pipes or aggregators to keep up with news. However those solutions do not guarantee data privacy and usually manage news by origin. 
-The zone project proposes an innovative solution to overcome those issues using the power of Semantic Web to group related informations together.
-ZONE-project provides a new, innovative way to follow news. 
-At its core, the system is aggregating news items from various RSS feeds.
-Using semantic web we are able to efficiently tag and annotate each news. 
-Those tags are the basis of filters to allow users to see only news that are relevant.
+The zone project proposes an innovative solution to address the traditional issues of news feed management using the resources of Semantic Web to group related informations together.
+It provides a new way to follow feeds by aggregating items from various RSS feeds, tagging and annotating each one of them. Those tags then provide a basis for filters allowing users to see only relevant news.
 
 
 %The abstract should summarize the contents of the paper
@@ -53,26 +49,26 @@ Those tags are the basis of filters to allow users to see only news that are rel
 %
 \section{Motivation}
 %
-A lot of news are published every day on internet, the number of news websites has increased significantly. People and organizations are now building news aggregators in order to sort all this information. This systems are really important in order to clean all the amount of information.
+A lot of news are published every day on the internet and the number of news websites has increased significantly. People and organizations are now building news aggregators in order to filter and sort all this information.
 
-Solutions exist, for instance one can use \textsl{Google news} \footnote{\url{http://news.google.fr}} like a trusted provider of information, but in this web application your are only a consumer and don't have a lot of interactions with the system. 
+Solutions exist, for instance one can use \textsl{Google news} \footnote{\url{http://news.google.fr}} like a trusted provider of information, but in this web application your are only a consumer and you don't have a lot of interactions with the system. 
 
-The second solution is to make news forecasting using \textsl{Twitter}\footnote{\url{http://www.twitter.com}}, it's a  solution in which one can control the sources he follows. But you can't have a selection on sources and on topics and you have a lot of noise around goods informations.
+A second kind of solutions is to make news forecasting using for instance \textsl{Twitter}\footnote{\url{http://www.twitter.com}}. It's a solution in which one can control the sources he follows. But you can't select precisely on sources and on topics at the same time and a lot of noise remains around good information. Even the hash-tags provide a limited solution since they suffer from collision.  
 ***************** oui, les recherches par mots tags ne permettent pas de supprimer les bruit liés à l'utilisation de mêmes hashtags sur différents sujets distincts **************************
 
 
-The last relevant solution that one can use is \textsl{Yahoo Pipes} \footnote{\url{http://pipes.yahoo.com/pipes/}}, this tool allows the mixing of popular data feeds to create data filtering via a visual editor. It uses pipes as workflows which will help users to sort feeds.
+The last family of relevant solutions one can use is aggregators like \textsl{Yahoo Pipes} \footnote{\url{http://pipes.yahoo.com/pipes/}}. This tool allows the mixing of popular data feeds to create data filtering via a visual editor. It uses pipes as workflows which will help users sort feeds.
 
-From these three types of approaches we can identify some main challenges that good aggregators need to work on.
+From these three types of approaches we can identify some main challenges that good aggregators need to work on:
 \begin{itemize}
-  \item \textbf{filtering capacities} we need to be able to select and sort information according to precise criteria.
-  \item \textbf{lots of informations} the tool needs to have access to a maximum of news present on internet 
-  \item \textbf{privacy} users need to use the solution independently of any source provider.
+  \item \textbf{filtering capacities}: we need to be able to select and sort information according to precise criteria.
+  \item \textbf{open pool of sources}: the tool needs to have access to a maximum of news present on internet and allow the user to add new ones.
+  \item \textbf{independence}: users need to use the solution independently of any provider.
 \end{itemize}
 
-Technicals solutions exists in order to solve this challenges, Google solve this problem using [article de Larry Page sur l'aggregation par mots clés] but this solution is not very efficient because it works on words instead of working on meaning. The solution we propose is an aggregation based on semantic web frameworks. 
+Technicals solutions exists in order to solve these challenges. Google solves the filtering problem using [article de Larry Page sur l'aggregation par mots clés] but this solution is not very efficient because it works on words instead of working on meaning. The solution we propose is an aggregation based on semantic web frameworks. 
 
-We will first present in this article how our solution called Zone. We will explain the annotation workflow, the ontology used and the use of data-mining solutions. The we will present a demonstration of the application and finally conclude and talk about future work.
+We will first present in this article our solution called Zone. We will explain the annotation workflow, the ontology used and the use of data-mining solutions. We will also present the script of the demonstration of the application.
 
 %
 \section{Application: Zone}
@@ -83,29 +79,33 @@ We will first present in this article how our solution called Zone. We will expl
 \begin{figure}[htb!]
 	\begin{centering}
 	\includegraphics[width=1\textwidth]{diagramArchi.png}
-	\caption{Workflows d'annotation et de filtrage sémantique de nouvelles}
+	\caption{Annotation workflows and semantic filtering of news}
 	\label{fig:WF}
 	\end{centering}
 \end{figure}
 
-In order to have a selection more efficient of news according to their semantic relevance, we have created two sort of workflows, figure \ref{fig:WF} shows the general architecture: a semantic annotation workflow of news and a filtering workflow. The distinction between the two workflows is extremely important in order to work in an asynchronous way.
-
-
+In order to have a more efficient news selection according to their semantic relevance, we have created two kinds of workflows. Figure \ref{fig:WF} shows the general architecture: a semantic annotation workflow of news and a filtering workflow. The distinction between the two workflows is extremely important in order to work in an asynchronous way.
 
 
 \subsubsection{The semantic annotation workflow}
-He crawled the web extracting all news and storing them in database next to semantic annotations.
-In order to make the news retreival we use RSS feeds technologies and will not present them in details. The storage of the news is made 
-We will present more in details the annotation procesus and the use of links with linkedOpenDatas, for the news retreival we ue techno
-
-%\subsubsubsection{Annotators}
-********************citer les différents et comment ils marchent et aussi le ExtractArticleContent********************
+First, Zone crawls the web extracting all news and storing them in database.
+Two annotators extract semantic annotations from the textual content of the news: one calls Wikimeta to create links to Wikipedia resources and the other calls OpenCalais takes care of the geographical references.
+New content and semantic annotations are then stored together in a triple store (Vituoso).
 
 \subsubsection{The filtering workflow}
-He is giving the user the possibility to access all datas organized by the annotation workflow. He is organized as a web application using the web framework RubyOnRails \footnote{\url{http://rubyonrails.org}} which help us to build the web application. In order to create the SPARQL requests on database we ask with examples to the user which annotations he want to follow. He can make some tests of filters on the website in order to see what will be the result of the filter. Last he can create a RSS feed based on this filters.
+Zone gives the user the possibility to access all data organized by the annotation workflow. It is designed as a web application using the web framework RubyOnRails \footnote{\url{http://rubyonrails.org}}. Starting from news samples the user can build filters that are stored and applied as SPARQL queries. These queries are then performed over the triple store fed by the annotation workflow. From these selection queries the user can publish an RSS feed of results.
+
 %
-\subsection{The ontologie}
+\subsection{The Zone News Ontology}
 %
+
+% link to other news ontologies
+% // event media ontology etc.
+
+% graph of the ontology
+% publish on ns.inria.fr 
+% textual description of core classes and properties.
+
 **************basée sur RSS
 on a ajouté un schéma RDFs spécialisé
 on se base aussi sur l'ontologie de wikimeta/insee***************
@@ -114,6 +114,10 @@ on se base aussi sur l'ontologie de wikimeta/insee***************
 %
 \subsection{Using generalisators}
 *******parler de l'insee********
+Currently the generalisators focus on saturating the annotations with the transitive closure of geographical inclusion (e.g. from an annotation insee:Paris we will add insee:France). 
+In the future we intend to add ...
+%TODO: add other completions
+ 
 
 %
 \subsection{Using datamining}
@@ -121,13 +125,13 @@ section d'Ameni
 
 \section{Demonstration}
 %
-The web application is designed for all kind of news feed like technological, medical or general news feed. You can install the application according to your needs and the AGPL licence. We also propose a web application for general news feed on \url{http://demo.zone-project.org} which is the main test platform for the application.
+The web application is designed for all kinds of news feeds be them about technology, medicine or general news. You can install the application according to your needs under the AGPL licence. We also propose a public service for general news feed at \url{http://demo.zone-project.org} which is the main test platform for the application.
 
-The demo starts with the listing of all recent news on \url{http://demo.zone-project.org}. Then we create a filter according to some criteria in order to show to the audience the different kind of filters present and their links to the news. Finally, when the good filter is chosen, we export it to an external RSS feed aggregator showing that our web application can be use in combination of other tools.
+The demo will start with the listing of all recent news on \url{http://demo.zone-project.org}. Then we will create a filter according to some criteria in order to show to the audience the different kinds of filters present and their links to the news. Once the good filter is chosen, we will show how to export it as an external RSS feed aggregator demonstrating that our web application can be used in combination to other tools.
 
-Then we propose an other usage of ZONE-project, according to twitter. We go on the demo application and make a quick demonstration of news filtering on the hashtag #eswc2013.
+Then we will propose another usage of ZONE-project this time based on Twitter. With another demo application we will make a quick demonstration of news filtering on the hashtag #eswc2013.
 
-\section{Conclusion and futur work}
+\section{Conclusion and future work}
 %
 Challenges qui restent à résoudre :
 	*tech : faire des liens vers openData et du raisoning
