add demo work during seminarium

--- a/docs/ESWC/zone-demo.tex
+++ b/docs/ESWC/zone-demo.tex
@@ -15,7 +15,7 @@
 
 \mainmatter              % start of the contributions
 %
-\title{Zone-project: towards a better news feed using semantic web SR je separerais en titre, sous titre SR}
+\title{Zone-project: towards a better news feed using semantic web}
 %
 \titlerunning{Zone-project}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
@@ -28,10 +28,13 @@
 %%%% list of authors for the TOC (use if author list has to be modified)
 \tocauthor{Christophe Desclaux}
 %
-\institute{Wimmics Inria, Sophia Antipolis...,\\
+
+\institute{Wimmics Inria, Sophia Antipolis,\\
 \email{christophe@zouig.org},\\ WWW home page:
 \texttt{http://www.zone-project.org}
-}
+\and
+Polytech nice sophia}
+
 
 \maketitle
 
@@ -169,11 +172,7 @@ SR dans la conclusion, il faut reprend du texte de l'intro, re expliquer rapidem
 
 \section{Acknowledgments}
 %
-ZONE project has been started in 2011 according to an and of engineering school project made in collaboration with the Modalis (CNRS) team and Wimmics (INRIA) team by Christophe Desclaux. During this project we worked on the architecture of the project using workflows and software product lines \cite{desclaux:urli}. Then Christophe Desclaux won an Inria contest called BoostYourCode which result in a one year full time work on the ZONE project. He is now working in the Wimmics team on the project and has been joined by Ameni Bouaziz who has work on the integration of data meaning solutions in the application as her end of year engineering project.
-
-SR 
-ZONE project started in 2011 from an engineering school project made in collaboration with the Modalis (CNRS) team and Wimmics (INRIA) team by Christophe Desclaux. During this project he worked on the software architecture using workflows and software product lines \cite{desclaux:urli}. (je comprends pas le mot product lines) In 2012, Christophe Desclaux won the Inria contest called BoostYourCode which propose to a student the possibility to work, one year, as a full time engineer, on the project selected. As a consequence, Christophe is now working at Inria in the Wimmics team.  Recently, Ameni Bouaziz has joined the Zone project and work actively on the integration of data meaning solutions in the application.
-SR
+ZONE project started in 2011 from an engineering school project made in collaboration with the Modalis (CNRS) team and Wimmics (INRIA) team by Christophe Desclaux. During this project he worked on the software architecture using workflows and software product lines \cite{desclaux:urli}. In 2012, Christophe Desclaux won the Inria contest called BoostYourCode which propose to a student the possibility to work, one year, as a full time engineer, on the project selected. As a consequence, Christophe is now working at Inria in the Wimmics team.  Recently, Ameni Bouaziz has joined the Zone project and work actively on the integration of data meaning solutions in the application.
 %
 % ---- Bibliography ----
 %
